[package]
name = "floof"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "floof"
test = true
bench = false

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.6"
lazy_static = { version = "1.5.0", features = [ "spin_no_std" ] }
spin = "0.10.0"
x86_64 = "0.15.4"
uart_16550 = "0.4.0"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # exit, with port 0xf4
    "-serial", "stdio", # allow IO from qemu serial to the host
    "-display", "none", # make qemu run in bg during test
]
test-success-exit-code = 33 # (0x10 << 1) | 1
